[package]
name = "comstr"
version = "0.1.0"
edition = "2021"
authors = ["BootlegSorcery <me@bootlegsorcery.com>"]
description = """
A simple program to efficiently identify common substrings amongst a collection of strings.
Largely this is just a CLI wrapper around https://github.com/hanwencheng/common_substrings_rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
common_substrings = "1.0.0"